kube-man/b-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: flight-web-deployment
  namespace: silly-flights
  labels:
    app: node
spec:
  replicas: 3
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: node
  template:
    metadata:
      labels:
        app: node
    spec:
      containers:
      - name: node
        image: ellozac/flights:v0.2
        ports:
        - name: web
          containerPort: 8080
