kube-man/c-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: silly-flight-service
  namespace: silly-flights
spec:
  selector:
    app: node
  ports:
  - name: http
    targetPort: 8080
    port: 80
